// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.content: - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "areas.content:",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": undefined,
      "title": "Tooltip block",
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "default",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": undefined,
      "title": undefined,
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.arrowPointAtCenter: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": true,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.arrowPointAtCenter: true",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": "topLeft",
      "title": "arrowPointAtCenter true",
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoAdjustOverflow: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": false,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.autoAdjustOverflow: false",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": "right",
      "title": "autoAdjustOverflow false",
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoAdjustOverflow: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": true,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.autoAdjustOverflow: true",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": "right",
      "title": "autoAdjustOverflow true",
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.color: blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": "blue",
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.color: blue",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": undefined,
      "title": "color blue",
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.defaultVisible: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": true,
      "destroyTooltipOnHide": undefined,
      "id": "properties.defaultVisible: true",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": undefined,
      "title": "defaultVisible true",
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mouseEnterDelay: 1 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.mouseEnterDelay: 1",
      "mouseEnterDelay": 1,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": undefined,
      "title": "mouseEnterDelay 1",
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mouseLeaveDelay: 1 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.mouseLeaveDelay: 1",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": 1,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": undefined,
      "title": "mouseLeaveDelay 1",
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.overlayStyle: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.overlayStyle: border: 5px solid blue",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"style\\":{\\"border\\":\\"5px solid blue\\"},\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": undefined,
      "title": "Tooltip block",
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placement - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.placement",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": "topLeft",
      "title": "placement topLeft",
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.title",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": undefined,
      "title": "Tooltip block",
      "trigger": "hover",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.trigger: click - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.trigger: click",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": undefined,
      "title": "trigger click",
      "trigger": "click",
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.zIndex: 100 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "arrowPointAtCenter": undefined,
      "autoAdjustOverflow": undefined,
      "children": Array [
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>,
        "",
      ],
      "color": undefined,
      "defaultVisible": undefined,
      "destroyTooltipOnHide": undefined,
      "id": "properties.zIndex: 100",
      "mouseEnterDelay": undefined,
      "mouseLeaveDelay": undefined,
      "onVisibleChange": [Function],
      "overlayStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "placement": undefined,
      "title": "zIndex 1000",
      "trigger": "hover",
      "zIndex": 1000,
    },
    Object {},
  ],
]
`;
